[gd_scene load_steps=4 format=3 uid="uid://bqf7jx3ytc1tf"]

[ext_resource type="Script" path="res://addons/generate_sprite_sheet/scene/component/split_handle/split_handle.gd" id="1_8h64c"]
[ext_resource type="PackedScene" uid="uid://b3cve426il0hc" path="res://addons/generate_sprite_sheet/scene/component/common/item_vector2/item_vector2.tscn" id="2_kd8pb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyxa8"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="split_handle" type="MarginContainer"]
offset_right = 580.0
offset_bottom = 108.0
script = ExtResource("1_8h64c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="margin_label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(216, 0)
layout_mode = 2
text = "MARGIN"
horizontal_alignment = 1

[node name="line" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer/HBoxContainer2/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="margin" parent="VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("2_kd8pb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(276, 0)
layout_mode = 2
x_name = "left"
y_name = "top"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="separate_label" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(216, 0)
layout_mode = 2
text = "SEPARATE"
horizontal_alignment = 1

[node name="line" type="MarginContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer2/HBoxContainer2/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="separator" parent="VBoxContainer/MarginContainer2/HBoxContainer2" instance=ExtResource("2_kd8pb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(278, 0)
layout_mode = 2
x_name = "left"
y_name = "top"

[node name="line2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/line2"]
modulate = Color(0, 0, 0, 0.470588)
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
columns = 2

[node name="split_size_btn" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(216, 0)
layout_mode = 2
text = "SIZE_SEGMENTATION"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/HBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/GridContainer/HBoxContainer/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="split_size" parent="VBoxContainer/HBoxContainer/GridContainer/HBoxContainer" instance=ExtResource("2_kd8pb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(278, 0)
layout_mode = 2
value = Vector2(16, 16)

[node name="split_column_row_btn" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(216, 0)
layout_mode = 2
text = "COL_ROW_SEGMENTATION"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/HBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/GridContainer/HBoxContainer2/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="split_column_row" parent="VBoxContainer/HBoxContainer/GridContainer/HBoxContainer2" instance=ExtResource("2_kd8pb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(278, 0)
layout_mode = 2
value = Vector2(4, 4)

[connection signal="value_changed" from="VBoxContainer/MarginContainer/HBoxContainer2/margin" to="." method="_on_margin_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer2/HBoxContainer2/separator" to="." method="_on_item_vector_2_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/split_size_btn" to="." method="_on_split_size_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/split_column_row_btn" to="." method="_on_split_column_row_pressed"]
